FinalProject/Whole Project/final/notsdk/.metadata/.plugins/org.eclipse.cdt.ui/v1final.build.log
22:01:58 **** Incremental Build of configuration Debug for project v1final ****
make all 
'Building file: ../src/hdmi_text_controller.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/hdmi_text_controller.o" -IC:/Users/lukej/ECE_385/Final_Project/final/sdk/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/hdmi_text_controller.d" -MT"src/hdmi_text_controller.o" -o "src/hdmi_text_controller.o" "../src/hdmi_text_controller.c"
In file included from ../src/hdmi_text_controller.h:8,
                 from ../src/hdmi_text_controller.c:4:
C:/Users/lukej/ECE_385/Final_Project/final/sdk/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xparameters.h:627:50: warning: initialization of 'volatile struct TEXT_HDMI_STRUCT *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  627 | #define XPAR_HDMI_TEXT_CONTROLLER_0_AXI_BASEADDR 0x44A00000
      |                                                  ^~~~~~~~~~
../src/hdmi_text_controller.h:28:54: note: in expansion of macro 'XPAR_HDMI_TEXT_CONTROLLER_0_AXI_BASEADDR'
   28 | static volatile struct TEXT_HDMI_STRUCT* hdmi_ctrl = XPAR_HDMI_TEXT_CONTROLLER_0_AXI_BASEADDR;
      |                                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/hdmi_text_controller.c:77:1: warning: return type defaults to 'int' [-Wimplicit-int]
   77 | hdmiTestWeek2()
      | ^~~~~~~~~~~~~
../src/hdmi_text_controller.c:77:1: warning: conflicting types for 'hdmiTestWeek2'
In file included from ../src/hdmi_text_controller.c:4:
../src/hdmi_text_controller.h:115:6: note: previous declaration of 'hdmiTestWeek2' with type 'void()'
  115 | void hdmiTestWeek2(); //call this for your Week 2 demo
      |      ^~~~~~~~~~~~~
../src/hdmi_text_controller.c: In function 'hdmiTestWeek2':
../src/hdmi_text_controller.c:82:29: error: expected ';' before 'for'
   82 |         xil_printf("test 2")
      |                             ^
      |                             ;
   83 | 
   84 |         for (int j = 0; j < ROWS; j++)
      |         ~~~                  
../src/hdmi_text_controller.c:80:34: warning: unused variable 'readsum' [-Wunused-variable]
   80 |         uint32_t checksum[ROWS], readsum[ROWS];
      |                                  ^~~~~~~
../src/hdmi_text_controller.c:80:18: warning: unused variable 'checksum' [-Wunused-variable]
   80 |         uint32_t checksum[ROWS], readsum[ROWS];
      |                  ^~~~~~~~
In file included from ../src/hdmi_text_controller.c:4:
At top level:
../src/hdmi_text_controller.h:31:21: warning: 'colors' defined but not used [-Wunused-variable]
   31 | static struct COLOR colors[]={
      |                     ^~~~~~
make: *** [src/subdir.mk:29: src/hdmi_text_controller.o] Error 1

22:01:59 Build Finished (took 804ms)

